Changed isBlank for isEmpty